Add code to connect two streams together.  Not functioning: curl: (35) error:1408F10B:SSL routines:ssl3_get_record:wrong version number